[miniflare] Expose parsed received email bodies
